--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "clsx": "^2.1.1",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.2",
-    "clsx": "^2.1.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@iconify/tailwind4": "^1.0.6",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
