Update project name in package.json and reset output configuration in next.config.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cerebi-intern-assignment-dor",
+  "name": "logidog_demo_website",
   "version": "0.1.0",
   "private": true,
   "type": "module",
