--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "export": "next export"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
