--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,59 +1,89 @@
-
-name: Deploy Next.js site to Pages
+name: Deploy Next.js static export to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: [master]            # your default branch
+  workflow_dispatch:              # manual trigger
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read                  # read the repo
+  pages: write                    # publish to gh-pages
+  id-token: write                 # OIDC for Pages
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  group: pages
+  cancel-in-progress: true        # skip stale builds
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-         # … (detect-package-manager / setup-node / cache) …
+    # ───── 1. Checkout ───────────────────────────────────────────
+    - uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+    # ───── 2. Detect package manager (npm | yarn | pnpm) ────────
+    - id: pm
+      run: |
+        if [[ -f yarn.lock ]];   then echo "pm=yarn"  >> $GITHUB_OUTPUT; fi
+        if [[ -f pnpm-lock.yaml ]];then echo "pm=pnpm" >> $GITHUB_OUTPUT; fi
+        if [[ -f bun.lockb ]];   then echo "pm=bun"   >> $GITHUB_OUTPUT; fi
+        if [[ -z "${{ steps.pm.outputs.pm }}" ]];     then echo "pm=npm" >> $GITHUB_OUTPUT; fi
 
-      # 1️⃣ Build **and** Export
-      - name: Build & Export static site
-        run: |
-          ${{ steps.detect-package-manager.outputs.runner }} next build
-          ${{ steps.detect-package-manager.outputs.runner }} next export
-          # 2️⃣ Disable Jekyll so `_next/` isn’t stripped
-          touch out/.nojekyll
+    # ───── 3. Setup runtimes + caches ───────────────────────────
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: ${{ steps.pm.outputs.pm }}
 
-      # 3️⃣ Upload the finished `out/` folder
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./out
+    - if: steps.pm.outputs.pm == 'bun'
+      uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: 1.1.7
 
+    # Node_modules / bun cache handled automatically by the 2 steps above
+
+    # Cache the Next.js build cache
+    - name: Restore Next.js cache
+      uses: actions/cache@v4
+      with:
+        path: .next/cache
+        key: next-${{ runner.os }}-${{ github.sha }}
+        restore-keys: next-${{ runner.os }}-
+
+    # ───── 4. Install deps ──────────────────────────────────────
+    - run: |
+        case "${{ steps.pm.outputs.pm }}" in
+          npm)  npm ci ;;
+          yarn) yarn --immutable ;;
+          pnpm) pnpm install --frozen-lockfile ;;
+          bun)  bun install ;;
+        esac
+
+    # ───── 5. Quality gate (lint + type-check) ───────────────────
+    - run: npx next lint
+    - run: npx tsc --noEmit
+    # - run: npm test        # ← enable if you have tests
+
+    # ───── 6. Build & export static site ─────────────────────────
+    - run: |
+        npx next build
+        npx next export
+        touch out/.nojekyll      # keep _next/ alive on Pages
+
+    # ───── 7. Upload artifact for deploy step ───────────────────
+    - uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./out
+
+  # ─────────────── Deploy job ────────────────────────────────────
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+      url: ${{ steps.deploy.outputs.page_url }}
+
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    - id: deploy
+      uses: actions/deploy-pages@v4
